<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ui.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:gravity="center_horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:src="@drawable/evergreen_logo"
            android:contentDescription="@string/content_description_evergreen_logo"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/welcome_app_title"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/welcome_app_subtitle"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="textEmailAddress"
            android:hint="@string/login_hint_email"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints="@string/login_hint_email"
            android:textSize="@dimen/textSizeTitle"/>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints="@string/login_hint_password"
            android:textSize="@dimen/textSizeTitle"/>

        <Button
            android:id="@+id/buttonActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/continue_btn"
            android:textSize="@dimen/textSizeTitle"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/tvLinktoSendPasswordResetEmail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textSize="@dimen/textSizeSubtitle"
            android:textStyle="bold"
            android:text="@string/PasswordResetHint"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textColorLink="@color/green"/>

        <TextView
            android:id="@+id/tvLinkFromLoginToRegister"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textSize="@dimen/textSizeSubtitle"
            android:textStyle="bold"
            android:text="@string/not_yet_register_link"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textColorLink="@color/green"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonActivityLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/whiteGrey"
            android:drawableStart="@drawable/google_icon"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/continue_google_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonActivityLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/whiteGrey"
            android:drawableStart="@drawable/facebook"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/continue_google_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/textSizeTitle" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResetPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent"
        android:visibility="gone">

        <ImageView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/evergreen_logo"
            android:contentDescription="@string/content_description_evergreen_logo"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/ResetPwdEmailDesc"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etResetPwdEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ResetPwdEmailHint"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints="@string/login_hint_email"
            android:textSize="@dimen/textSizeTitle"
            android:layout_margin="10dp"/>


        <Button
            android:id="@+id/buttonResetPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonResetPwd"
            android:textSize="@dimen/textSizeTitle"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/tvLinkBackFromSendPasswordResetEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeSubtitle"
            android:textStyle="bold"
            android:text="@string/LinkBackFromSendPasswordResetEmail"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textColorLink="@color/green"/>

    </LinearLayout>

</RelativeLayout>