<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ui.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:src="@drawable/evergreen_logo"
            android:contentDescription="@string/content_description_evergreen_logo" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/welcome_app_title"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/welcome_app_subtitle"
            android:textColor="@color/primary_text"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/etRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="text"
            android:hint="@string/register_hint_username"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints="@string/register_hint_username"
            android:textSize="@dimen/textSizeTitle"/>

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="textEmailAddress"
            android:hint="@string/register_hint_email"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/register_hint_email"
            android:textSize="@dimen/textSizeTitle"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/register_hint_password"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:autofillHints="@string/register_hint_password"
            android:textSize="@dimen/textSizeTitle"/>

        <Button
            android:id="@+id/buttonActivityRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="25dp"
            android:text="@string/continue_btn"
            android:textSize="@dimen/textSizeTitle"
            android:textAllCaps="false"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonActivityRegisterGoogle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/google_icon"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/continue_google_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonActivityRegisterFacebook"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/facebook"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/continue_google_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeTitle"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvLinkFromRegisterToLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textSize="@dimen/textSizeSubtitle"
            android:textStyle="bold"
            android:text="@string/already_member_login_link"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:linksClickable="true"
            android:textColor="@color/primary_dark"
            android:textColorLink="@color/green"/>

    </LinearLayout>

</RelativeLayout>