<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.ChatListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarChatList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbarChatList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:layout_marginStart="18dp"
                android:layout_width="@dimen/toolbar_logo_dimen"
                android:layout_height="@dimen/toolbar_logo_dimen"
                android:src="@drawable/evergreen_logo"
                android:contentDescription="@string/cd_evergreen_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textSizeTitle"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:text="@string/chat_list_appbar_text" />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarChatList">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChatList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <RelativeLayout
            android:id="@+id/rlBaseChats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.4"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlChatListEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_light_green"
                />
            <ImageView
                android:id="@+id/ivChatListEmptyImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_comment_24"
                android:layout_above="@id/tvChatListEmptyText"
                android:contentDescription="@string/cd_chat_list_empty_image" />
            <TextView
                android:id="@+id/tvChatListEmptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/textSizeSubtitle"
                android:text="@string/chat_list_empty_text"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>