<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.FavoritesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolbarFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:layout_marginStart="18dp"
                android:layout_width="@dimen/toolbar_logo_dimen"
                android:layout_height="@dimen/toolbar_logo_dimen"
                android:src="@drawable/evergreen_logo"
                android:contentDescription="@string/cd_evergreen_logo" />

            <TextView
                android:id="@+id/tvProfileUpcyclingIdeasText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textSizeTitle"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:text="@string/favorites_appbar_text" />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarFavorites">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavoritePosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:id="@+id/rlBaseFavoritesPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:alpha="0.4"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlFavoritesListEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_light_green"
                />
            <ImageView
                android:id="@+id/ivFavoritesListEmptyImage"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/post_default_image"
                android:layout_above="@id/tvFavoritesListEmptyText"
                android:contentDescription="@string/cd_favorites_list_empty_image" />
            <TextView
                android:id="@+id/tvFavoritesListEmptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="italic"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/textSizeSubtitle"
                android:text="@string/favorites_list_empty"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>